<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#E91E63">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="20"
                android:id="@+id/etNombreProblema" android:textColor="@android:color/background_light"
                android:singleLine="false" android:selectAllOnFocus="false"
                android:hint="Introduzca el nombre de problema"
                android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="61dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="20"
                android:id="@+id/etLugarTarea" android:textColor="@android:color/background_light"
                android:hint="Introduzca el lugar de la tienda  del problem"
                android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="55dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="20"
                android:id="@+id/etPersonaTarea" android:textColor="@android:color/background_light"
                android:hint="Introduzca quien eres" android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="200"
                android:ems="10"
                android:id="@+id/etDescripcionTarea" android:textColor="@android:color/background_light"
                android:hint="Introduzca descripcion" android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Clicka para seleccionar fecha de creacion de tarea"
                android:textAlignment="center"
                android:maxLength="20"
                android:textSize="24sp"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/tvDateCaducidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Clicka para seleccionar fecha de caducidad"
                android:textAlignment="center"
                android:maxLength="20"
                android:textSize="24sp"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>


    <Button
            android:text="Enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bFormularioEnviar"
            android:background="@android:color/background_light" android:textStyle="italic"
            android:textAlignment="center" android:textSize="30sp"/>
    <Button
            android:text="Cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonCancel"
            android:background="@android:color/background_light" android:textAlignment="center"
            android:textSize="24sp" android:fontFamily="sans-serif"/>
</LinearLayout>