<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#E91E63">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:maxLength="20"
                android:id="@+id/etNombreProblemaEdit" android:textColor="@android:color/background_light"
                android:singleLine="false" android:selectAllOnFocus="false"
                android:hint="Introduzca el nombre de problema que quieras actualizar"
                android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:ems="10"
                android:id="@+id/etLugarTareaEdit" android:textColor="@android:color/background_light"
                android:hint="Introduzca el lugar de la tienda  del problema"
                android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:ems="10"
                android:id="@+id/etPersonaTareaEdit" android:textColor="@android:color/background_light"
                android:hint="Introduzca quien eres" android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="200"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etDescripcionTareaEdit" android:textColor="@android:color/background_light"
                android:hint="Introduzca descripcion" android:textColorHint="@android:color/background_light"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp">
        <TextView
                android:id="@+id/editDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Clicka para seleccionar fecha"
                android:textAlignment="center"
                android:textSize="24sp"
                android:padding="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:textColorHint="@android:color/white"
                android:maxLength="20"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
    <Button
            android:text="Actualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bActualizarT" android:textSize="18sp"
            android:fontFamily="monospace"/>
    <Button
            android:text="cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/cancelar" android:textSize="18sp"
            android:fontFamily="monospace"/>
</LinearLayout>